Wed Mar 22 02:55:37 2000  Tom Gilbert  <gilbertt@btinternet.com>

	* Okay. I found a naughty bug of mine. If the last image of a
	montage/index was not loadable - core was dumped. Nice bug. Fun to
	find =) I blame redhat.

Tue Mar 21 15:45:02 2000  Tom Gilbert  <gilbertt@btinternet.com>

	* Major cruft removal and tidying of code path. Progressive
	loading code slightly less complex now.

Tue Mar 21 15:18:08 2000  Tom Gilbert  <gilbertt@btinternet.com>

	* Big optimisation for progressive loading in fullscreen mode. I
	was recreating the pixmap at every iteration - damnit ;)

Mon Mar 20 21:54:22 2000  Tom Gilbert  <gilbertt@btinternet.com>

	* Dammit. Why do I find these things *after* a release?

Mon Mar 20 19:24:46 2000  Tom Gilbert  <gilbertt@btinternet.com>

	* Released 0.7.0

Sun Mar 19 20:55:57 2000  Tom Gilbert  <gilbertt@btinternet.com>

	* Main event loop tidy up.

Sat Mar 18 21:59:55 2000  Tom Gilbert  <gilbertt@btinternet.com>

	* Added a coupla more tests...

Sat Mar 18 21:56:08 2000  Tom Gilbert  <gilbertt@btinternet.com>

	* Fixed stupid segfault using --list when there are no loadable
	images.

Sat Mar 18 14:06:08 2000  Tom Gilbert  <gilbertt@btinternet.com>

	* --list tidy up.

Sat Mar 18 02:56:03 2000  Tom Gilbert  <gilbertt@btinternet.com>

	* More --verbose twiddles.

Sat Mar 18 02:18:39 2000  Tom Gilbert  <gilbertt@btinternet.com>

	* Made the --verbose output more useful, and prettier ;)

Sat Mar 18 00:37:17 2000  Tom Gilbert  <gilbertt@btinternet.com>

	* Made the -V, --verbose option give cooler output on loading
	mulitple images. It's pretty flim now.

Sat Mar 18 00:32:42 2000  Tom Gilbert  <gilbertt@btinternet.com>

	* Added -U, --loadables, and -u, --unloadables. They don't show
	images, just list all the files from the filelist that are
	loadable or unloadable, respectively.

Fri Mar 17 22:58:14 2000  Tom Gilbert  <gilbertt@btinternet.com>

	* Don't need to create checkerboard for list mode, montage mode,
	index mode, etc...
